--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,7 @@
 streamlit
-Pillow
-reportlab
-Image
-datetime
-base64
-random
-io
-time
-tempfile
-A4
-canvas
 pandas
 matplotlib
 altair
-ploty.express
+plotly
+reportlab
+Pillow
